fixed spacing between columns on ABOUT page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
   }
 
 /* HOME */
+
   /* Header starts here */
   header {
     width: 100%;
@@ -75,9 +76,10 @@
   
   code {
     background-color: #d6ebf2;
-    border: 2px solid #443233;
+    border: 1px solid #443233;
     padding: 0px 15px 8px 15px;
     color: #443233;
+    font-family: "Lato", sans-serif;
   }
   
   .draw-font {
@@ -121,18 +123,18 @@
   /* Welcome button ends here */
 
 /* ABOUT */
-  #about {
-    padding: 80px 0;
-  }
 
   .row {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin: 80px 10%;
   }
 
   .about-col-1 {
     flex-basis: 45%;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .about-col-1 img {
@@ -142,6 +144,8 @@
 
   .about-col-2 {
     flex-basis: 50%;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .about-col-2 p {
@@ -155,55 +159,6 @@
     font-weight: 600;
     line-height: 60px;
     margin-bottom: 40px;
-  }
-
-  .tab-titles {
-    display: flex;
-    margin: 20px 0 40px 0;
-  }
-
-  .tab-links {
-    margin-right: 50px;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-    position: relative;
-  }
-
-  .tab-links::after {
-    content: "";
-    height: 3px;
-    width: 0;
-    background: #3cb6b8;
-    position: absolute;
-    left: 0;
-    bottom: -8px;
-    transition: 0.5s;
-  }
-
-  .tab-links.active-link::after {
-    width: 50%;
-  }
-
-  .tab-contents ul li {
-    list-style: none;
-    margin: 10px 0;
-    color: #443233;
-  }
-
-  .tab-contents ul li span {
-    font-size: 14px;
-    color: #3cb6b8;
-  }
-
-  /* hides all contents of tabs */
-  .tab-contents {
-    display: none;
-  }
-
-  /* displays only contents of an active tab */
-  .tab-contents.active-tab {
-    display: block;
   }
 
   /* Contact button - ABOUT */
@@ -239,3 +194,4 @@
     float: inline-end;
     margin-top: 10%;
   }
+  /* Contact button ends here */
